Z-index fix

--- a/include/style.css
+++ b/include/style.css
@@ -134,7 +134,7 @@ html, body {
 	background-color: #333;
 	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
-	z-index: 1;
+	z-index: 3;
 	top: 100%;
 	left: 0;
 }
